# phraseforge_data

./: .gitignore  README.md  pyproject.toml
dat/heb-hebr/: bible-vocabulary-eng-latn.ff
dat/zho-hans/: hsk-vocabulary-eng-latn.ff
dat/zho-hant/: lingshailuo-vocabulary-pol-latn.ff
src/phraseforge_data/cli/: cli.py  export_document.py  helpers.py  import_document.py  list_document.py  translate_document.py  validate.py
src/phraseforge_data/dat/: __init__.py
src/phraseforge_data/lib/: __init__.py  basetype.py  database.py  llm.py  parser.py  prompt.py  reader.py  sql.py  vocabulary.py
