[project]
name = "phraseforge-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "D. Purge", email = "dpurge@example.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
    "duckdb>=1.4.3",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
]

[project.scripts]
ff = "phraseforge_data:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
